feat: add yandex id system

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -51,7 +51,8 @@
       "euidIdSystem",
       "unifiedIdSystem",
       "verizonMediaIdSystem",
-      "zeotapIdPlusIdSystem"
+      "zeotapIdPlusIdSystem",
+      "yandexIdSystem"
     ],
     "adpod": [
       "freeWheelAdserverVideo",
