Add lmpIdSystem userId submodule

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -23,6 +23,7 @@
       "justIdSystem",
       "kinessoIdSystem",
       "liveIntentIdSystem",
+      "lmpIdSystem",
       "lotamePanoramaIdSystem",
       "merkleIdSystem",
       "mwOpenLinkIdSystem",
