Pubx.ai RTD Provider  - Initial Release (#11300)
* Add pubx RTD module

* Add pubx RTD module documentation

* Add basic tests for pubx RTD module

* Fix the failing tests

* Added logic to fetch floors and set to auction

* Updated setDataToConfig to attach floors data to bidder requests object

* pubx rtd module:
* fetch floor rules
* timeout defaults
* floors config customizations
* pubx on/off from floors response

* move fetch floors to init and also wait for it before auction

* TESTS: update

* replace createFloorsDataForAuction to avoid circular dep - WIP

* reset default floors when no floor response is received

* TESTS: add test

* tag integration - fetch floors api events

* * Remove coonsole.log
* move __pubxFloorRulesPromise__ to window
* Remove unused var error

* TESTS: add getBidRequestData, refactor stubs

* TESTS: setFloorsApiStatus

* TESTS: add fetchFloorRules

* remove useRtd

* make endpoint potional and take pubxId form provider config

* TESTS: use xhr to fakeServer instead of sinon

* make default data optional

* update README

* TEST: update tests

* add integration example

* remove floorProvider from default config

* fix linting

* update readme.md

---------

Co-authored-by: Phaneendra Hegde <phaneendra@pubx.ai>
Co-authored-by: Phaneendra Hegde <pnhegde@users.noreply.github.com>

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -90,6 +90,7 @@
       "optimeraRtdProvider",
       "oxxionRtdProvider",
       "permutiveRtdProvider",
+      "pubxaiRtdProvider",
       "qortexRtdProvider",
       "reconciliationRtdProvider",
       "relevadRtdProvider",
