lockr AIM user module: initial release (#11159)
* Adding Lockr AIM module and tests

* formatting

* Fix formatting

* format

* fix formatting

* add paapi back

* added markdown file

* 20240324 Fixed Storage Manager | lockrAIMIdSystem.js

* Updated to use Prebid Storage Manager | lockrAIMIdSystem_shared.js

* added the fix for the comments

* removed the unnecessary console

---------

Co-authored-by: chris-lockr <chris@loc.kr>
Co-authored-by: avin-lockr <avin@loc.kr>

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -4,6 +4,7 @@
       "33acrossIdSystem",
       "admixerIdSystem",
       "adtelligentIdSystem",
+      "adqueryIdSystem",
       "amxIdSystem",
       "britepoolIdSystem",
       "connectIdSystem",
@@ -13,9 +14,11 @@
       "deepintentDpesIdSystem",
       "dmdIdSystem",
       "fabrickIdSystem",
+      "freepassIdSystem",
       "hadronIdSystem",
       "id5IdSystem",
       "ftrackIdSystem",
+      "gravitoIdSystem",
       "identityLinkIdSystem",
       "idxIdSystem",
       "imuIdSystem",
@@ -23,13 +26,16 @@
       "justIdSystem",
       "kinessoIdSystem",
       "liveIntentIdSystem",
+      "lockrAIMIdSystem",
       "lotamePanoramaIdSystem",
       "merkleIdSystem",
       "mwOpenLinkIdSystem",
+      "mygaruIdSystem",
       "naveggIdSystem",
       "netIdSystem",
       "novatiqIdSystem",
       "oneKeyIdSystem",
+      "operaadsIdSystem",
       "parrableIdSystem",
       "pubProvidedIdSystem",
       "publinkIdSystem",
@@ -44,12 +50,7 @@
       "euidIdSystem",
       "unifiedIdSystem",
       "verizonMediaIdSystem",
-      "zeotapIdPlusIdSystem",
-      "adqueryIdSystem",
-      "gravitoIdSystem",
-      "freepassIdSystem",
-      "operaadsIdSystem",
-      "mygaruIdSystem"
+      "zeotapIdPlusIdSystem"
     ],
     "adpod": [
       "freeWheelAdserverVideo",
