Add lmpIdSystem userId submodule (#11431)
Co-authored-by: Antoine Niek <antoineniek@gmail.com>

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -26,6 +26,7 @@
       "justIdSystem",
       "kinessoIdSystem",
       "liveIntentIdSystem",
+      "lmpIdSystem",
       "lockrAIMIdSystem",
       "lotamePanoramaIdSystem",
       "merkleIdSystem",
