--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "fun-hooks": "^0.9.9",
     "gulp-wrap": "^0.15.0",
     "just-clone": "^1.0.2",
-    "live-connect-js": "file:live-connect-js-6.7.0.tgz"
+    "live-connect-js": "^6.7.1"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
