--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
+    "@eslint/js": "^9.2.0",
     "@wdio/browserstack-service": "^8.29.0",
     "@wdio/cli": "^8.29.0",
     "@wdio/concise-reporter": "^8.29.0",
@@ -54,17 +55,19 @@
     "deep-equal": "^2.0.3",
     "documentation": "^14.0.0",
     "es5-shim": "^4.5.14",
-    "eslint": "^7.27.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsdoc": "^38.1.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prebid": "file:./plugins/eslint",
     "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^1.0.0",
     "faker": "^5.5.3",
     "fs.extra": "^1.3.2",
+    "globals": "^15.2.0",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.0",
