--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -88,6 +88,7 @@
       "medianetRtdProvider",
       "mgidRtdProvider",
       "neuwoRtdProvider",
+      "luceadRtdProvider",
       "oneKeyRtdProvider",
       "optimeraRtdProvider",
       "oxxionRtdProvider",
