--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -43,8 +43,7 @@
       "tapadIdSystem",
       "teadsIdSystem",
       "tncIdSystem",
-      "utiqSystem",
-      "utiqMtpIdSystem",
+      "utiqIdSystem",
       "uid2IdSystem",
       "euidIdSystem",
       "unifiedIdSystem",
