--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -44,6 +44,7 @@
       "teadsIdSystem",
       "tncIdSystem",
       "utiqIdSystem",
+      "utiqMtpIdSystem",
       "uid2IdSystem",
       "euidIdSystem",
       "unifiedIdSystem",
