Prebid 9: rename utiqSystem to utiqIdSystem (#11593)
* Revert "Revert "Utiq ID submodule: Update submodule name and parameters (#10587)" (#10606)"

This reverts commit 2b3426d6cc135bc9f4c903b2270234fcfaf649f1.

* Update .submodules.json

---------

Co-authored-by: Patrick McCann <patmmccann@gmail.com>

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -43,7 +43,7 @@
       "tapadIdSystem",
       "teadsIdSystem",
       "tncIdSystem",
-      "utiqSystem",
+      "utiqIdSystem",
       "utiqMtpIdSystem",
       "uid2IdSystem",
       "euidIdSystem",
