rename fledgeForGpt -> paapiForGpt

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -107,7 +107,8 @@
       "videojsVideoProvider"
     ],
     "paapi": [
-      "fledgeForGpt"
+      "paapiForGpt",
+      "topLevelPaapi"
     ]
   }
 }
