--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -24,6 +24,13 @@ jobs:
     - name: Run jscpd
       run: jscpd --threshold 1 --min-tokens 50 --reporters json --output jscpd-report.json
 
+    - name: Upload jscpd report
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: jscpd-report
+        path: jscpd-report.json
+
     - name: Parse jscpd report and post comment
       id: post-comment
       run: |
