--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for all branches
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
