--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -26,14 +26,14 @@ jobs:
 
     - name: Run jscpd on entire codebase
       run: |
-        jscpd --threshold 1 --min-tokens 50 --reporters json --output jscpd-report.json
+        jscpd --threshold 20 --min-tokens 50 --reporters json --output jscpd-report.json --exclude "**/*spec.js"
 
     - name: Get the diff
       run: git diff origin/master...HEAD --name-only > changed_files.txt
 
     - name: Filter JavaScript files
       run: |
-        grep -E '\.js$' changed_files.txt > js_files.txt || true
+        grep -E '\.js$' changed_files.txt | grep -v 'spec.js' > js_files.txt || true
 
     - name: List generated files (debug)
       run: ls -l
