--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -46,11 +46,11 @@ jobs:
     - name: Parse jscpd report and set output
       id: parse-report
       run: |
-        if [ ! -f jscpd-report.json ]; then
+        if [ ! -f ./jscpd-report.json/jscpd-report.json ]; then
           echo "jscpd-report.json not found"
           exit 1
         fi
-        DUPLICATIONS=$(jq '.duplicates | length' jscpd-report.json)
+        DUPLICATIONS=$(jq '.duplicates | length' ./jscpd-report.json/jscpd-report.json)
         if [ "$DUPLICATIONS" -gt 0 ]; then
           COMMENT="Found $DUPLICATIONS duplications in the codebase:\n\n"
           while read -r file; do
