--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install -g jscpd diff-so-fancy
+        npm install -g jscpd diff-so-fancy jq
 
     - name: Create jscpd config file
       run: |
@@ -43,10 +43,6 @@ jobs:
     - name: Get the diff
       run: git diff origin/master...HEAD --name-only > changed_files.txt
 
-    - name: Filter JavaScript files
-      run: |
-        grep -E '\.js$' changed_files.txt | grep -v 'spec.js' > js_files.txt || true
-
     - name: List generated files (debug)
       run: ls -l
 
@@ -56,3 +52,21 @@ jobs:
       with:
         name: unfiltered-jscpd-report
         path: ./jscpd-report.json
+
+    - name: Filter jscpd report for changed files
+      run: |
+        if [ ! -f ./jscpd-report.json ]; then
+          echo "jscpd-report.json not found"
+          exit 1
+        fi
+        echo "Filtering jscpd report for changed files..."
+        CHANGED_FILES=$(jq -R -s -c 'split("\n")[:-1]' changed_files.txt)
+        jq --argjson changed_files "$CHANGED_FILES" '.duplicates | map(select($changed_files | index(.firstFile) or $changed_files | index(.secondFile)))' ./jscpd-report.json > filtered-jscpd-report.json
+        cat filtered-jscpd-report.json
+
+     - name: Upload filtered jscpd report
+       if: always()
+       uses: actions/upload-artifact@v4
+       with:
+         name: filtered-jscpd-report
+         path: ./filtered-jscpd-report.json
