--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -63,7 +63,8 @@ jobs:
         fi
         echo "Filtering jscpd report for changed files..."
         CHANGED_FILES=$(jq -R -s -c 'split("\n")[:-1]' changed_files.txt)
-        jq --argjson changed_files "$CHANGED_FILES" '.duplicates | map(select($changed_files | index(.firstFile) or $changed_files | index(.secondFile)))' ./jscpd-report.json > filtered-jscpd-report.json
+        echo "Changed files: $CHANGED_FILES"
+        jq --argjson changed_files "$CHANGED_FILES" '.duplicates | map(select(.firstFile | in($changed_files) or .secondFile | in($changed_files)))' ./jscpd-report.json > filtered-jscpd-report.json
         cat filtered-jscpd-report.json
 
     - name: Upload filtered jscpd report
