--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -22,6 +22,8 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install -y jq
         npm install -g jscpd diff-so-fancy
 
     - name: Create jscpd config file
@@ -64,8 +66,8 @@ jobs:
         echo "Changed files: $CHANGED_FILES"
         jq --argjson changed_files "$CHANGED_FILES" '
           .duplicates | map(select(
-            ($changed_files | index(.firstFile.name)) or 
-            ($changed_files | index(.secondFile.name))
+            ($changed_files | index(.firstFile.name)) != null or 
+            ($changed_files | index(.secondFile.name)) != null
           ))
         ' ./jscpd-report.json > filtered-jscpd-report.json
         cat filtered-jscpd-report.json
