--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -22,8 +22,6 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y jq
         npm install -g jscpd diff-so-fancy
 
     - name: Create jscpd config file
@@ -66,8 +64,8 @@ jobs:
         echo "Changed files: $CHANGED_FILES"
         jq --argjson changed_files "$CHANGED_FILES" '
           .duplicates | map(select(
-            ($changed_files | index(.firstFile.name)) != null or 
-            ($changed_files | index(.secondFile.name)) != null
+            ($changed_files | index(.firstFile.name) // -1) >= 0 or 
+            ($changed_files | index(.secondFile.name) // -1) >= 0
           ))
         ' ./jscpd-report.json > filtered-jscpd-report.json
         cat filtered-jscpd-report.json
