--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -64,8 +64,8 @@ jobs:
         echo "Changed files: $CHANGED_FILES"
         jq --argjson changed_files "$CHANGED_FILES" '
           .duplicates | map(select(
-            ($changed_files | index(.firstFile.name) // -1) >= 0 or 
-            ($changed_files | index(.secondFile.name) // -1) >= 0
+            any($changed_files[]; . == .firstFile.name) or
+            any($changed_files[]; . == .secondFile.name)
           ))
         ' ./jscpd-report.json > filtered-jscpd-report.json
         cat filtered-jscpd-report.json
