--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -64,8 +64,8 @@ jobs:
         echo "Changed files: $CHANGED_FILES"
         jq --argjson changed_files "$CHANGED_FILES" '
           .duplicates | map(select(
-            .firstFile.name as $fname | $changed_files | any(. == $fname) or
-            .secondFile.name as $sname | $changed_files | any(. == $sname)
+            .firstFile?.name? as $fname | $changed_files | any(. == $fname) or
+            .secondFile?.name? as $sname | $changed_files | any(. == $sname)
           )
         )
         ' ./jscpd-report.json > filtered-jscpd-report.json
