--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -86,3 +86,25 @@ jobs:
       with:
         name: filtered-jscpd-report
         path: ./filtered-jscpd-report.json
+
+      - name: Post GitHub comment
+      if: env.filtered_report_exists == 'true'
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const fs = require('fs');
+          const filteredReport = JSON.parse(fs.readFileSync('filtered-jscpd-report.json', 'utf8'));
+          let comment = "Whoa there, partner! 🌵🤠 We wrangled some duplicated code in your PR:\n\n";
+          filteredReport.forEach(duplication => {
+            const firstFile = duplication.firstFile.name;
+            const secondFile = duplication.secondFile.name;
+            const lines = duplication.lines;
+            comment += `- \`${firstFile}\` has ${lines} duplicated lines with \`${secondFile}\`\n`;
+          });
+          comment += "\nReducing code duplication by importing common functions from a library not only makes our code cleaner but also easier to maintain. Keep up the great work! 🚀";
+          github.rest.issues.createComment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+            body: comment
+          });
