--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -107,3 +107,11 @@ jobs:
             issue_number: context.issue.number,
             body: comment
           });
+
+
+
+    - name: Fail if duplications are found
+      if: env.filtered_report_exists == 'true'
+      run: |
+        echo "Duplications found, failing the check."
+        exit 1
