--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Check if filtered jscpd report exists
       id: check_filtered_report
       run: |
-        if [ -s ./filtered-jscpd-report.json ]; then
+        if [ $(wc -l < ./filtered-jscpd-report.json) -gt 1 ]; then
           echo "filtered_report_exists=true" >> $GITHUB_ENV
         else
           echo "filtered_report_exists=false" >> $GITHUB_ENV
@@ -107,3 +107,9 @@ jobs:
             issue_number: context.issue.number,
             body: comment
           });
+
+    - name: Fail if duplications are found
+      if: env.filtered_report_exists == 'true'
+      run: |
+        echo "Duplications found, failing the check."
+        exit 1
