--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -101,7 +101,7 @@ jobs:
             const lines = duplication.lines;
             comment += `- \`${firstFile}\` has ${lines} duplicated lines with \`${secondFile}\`\n`;
           });
-          comment += "\nReducing code duplication by importing common functions from a library not only makes our code cleaner but also easier to maintain. Keep up the great work! 🚀";
+          comment += "\nReducing code duplication by importing common functions from a library not only makes our code cleaner but also easier to maintain. Please move the common code from both files into a library and import it in each. Keep up the great work! 🚀";
           github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
