--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   check-duplication:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
     - name: Checkout code
@@ -90,7 +93,6 @@ jobs:
       if: env.filtered_report_exists == 'true'
       uses: actions/github-script@v7
       with:
-        github-token: ${{ secrets.PAT_TOKEN }}
         script: |
           const fs = require('fs');
           const filteredReport = JSON.parse(fs.readFileSync('filtered-jscpd-report.json', 'utf8'));
