--- a/.github/workflows/jscpd.yml
+++ b/.github/workflows/jscpd.yml
@@ -1,16 +1,13 @@
 name: Check for Duplicated Code
 
 on: 
-  pull_request:
+  pull_request_target:
     branches:
       - master
 
 jobs:
   check-duplication:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
 
     steps:
     - name: Checkout code
