AdagioRtdProvider: add to .submodules.json

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -60,6 +60,7 @@
       "1plusXRtdProvider",
       "a1MediaRtdProvider",
       "aaxBlockmeterRtdProvider",
+      "adagioRtdProvider",
       "adlooxRtdProvider",
       "adnuntiusRtdProvider",
       "airgridRtdProvider",
