WURFL Rtd Provider: list wurflRtdProvider in the .submodules.json file

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -97,7 +97,8 @@
       "relevadRtdProvider",
       "sirdataRtdProvider",
       "timeoutRtdProvider",
-      "weboramaRtdProvider"
+      "weboramaRtdProvider",
+      "wurflRtdProvider"
     ],
     "fpdModule": [
       "validationFpdModule",
