cleanup and sqaush

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -97,6 +97,7 @@
       "reconciliationRtdProvider",
       "relevadRtdProvider",
       "sirdataRtdProvider",
+      "symitriDapRtdProvider",
       "timeoutRtdProvider",
       "weboramaRtdProvider"
     ],
