feat: [S2S-1779] Enable PA API module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prebid.js",
-  "version": "8.49.3",
+  "version": "8.49.4-S2S-1779",
   "description": "Header Bidding Management Library",
   "main": "src/prebid.js",
   "scripts": {
