removed connatix build script

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "serve": "gulp serve",
     "test": "gulp test",
-    "lint": "gulp lint",
-    "build:connatix": "gulp build-bundle-prod --disable NATIVE --modules=modules.json",
-    "build:connatix:gannett": "gulp build-bundle-prod --disable NATIVE --modules=gannet-modules.json"
+    "lint": "gulp lint"
   },
   "repository": {
     "type": "git",
