--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@guardian/prebid.js",
-  "version": "8.52.0",
+  "version": "8.52.0-1",
   "description": "Header Bidding Management Library",
   "main": "src/prebid.js",
   "files": [
