add mobianRtdProvider to list of RTD submodules in .submodules.json

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -87,6 +87,7 @@
       "jwplayerRtdProvider",
       "medianetRtdProvider",
       "mgidRtdProvider",
+      "mobianRtdProvider",
       "neuwoRtdProvider",
       "oneKeyRtdProvider",
       "optimeraRtdProvider",
