--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "assert": "^2.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-istanbul": "^6.1.1",
-    "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
@@ -128,6 +127,7 @@
     "@babel/core": "^7.23.2",
     "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.16.8",
+    "@babel/register": "^7.24.6",
     "@babel/runtime": "^7.18.9",
     "@guardian/libs": "^16.0.0",
     "core-js": "^3.13.0",
