--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -74,6 +74,7 @@
       "mgidRtdProvider",
       "oneKeyRtdProvider",
       "optimeraRtdProvider",
+      "qortexRtdProvider",
       "permutiveRtdProvider",
       "reconciliationRtdProvider",
       "sirdataRtdProvider",
