Add new video module for AdPlayer.Pro

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -109,7 +109,8 @@
     ],
     "videoModule": [
       "jwplayerVideoProvider",
-      "videojsVideoProvider"
+      "videojsVideoProvider",
+      "adplayerproVideoProvider"
     ],
     "paapi": [
       "paapiForGpt",
