fixed submodules line

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -91,7 +91,7 @@
       "neuwoRtdProvider",
       "oneKeyRtdProvider",
       "optimeraRtdProvider",
-      "qortexRtdProvider",
+      "oxxionRtdProvider",
       "permutiveRtdProvider",
       "pubxaiRtdProvider",
       "qortexRtdProvider",
