AdPlayerPro Video Module : initial module release (#12150)
* Add new video module for AdPlayer.Pro

* Fix offEvent function with callback

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -110,7 +110,8 @@
     ],
     "videoModule": [
       "jwplayerVideoProvider",
-      "videojsVideoProvider"
+      "videojsVideoProvider",
+      "adplayerproVideoProvider"
     ],
     "paapi": [
       "paapiForGpt",
