51Degrees RTD submodule: add 51Degrees module to `.submodules.json`

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -58,6 +58,7 @@
     ],
     "rtdModule": [
       "1plusXRtdProvider",
+      "51DegreesRtdProvider",
       "a1MediaRtdProvider",
       "aaxBlockmeterRtdProvider",
       "adagioRtdProvider",
