New UserID submodule: rewardedInterestIdSystem

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -39,6 +39,7 @@
       "pubProvidedIdSystem",
       "publinkIdSystem",
       "quantcastIdSystem",
+      "rewardedInterestIdSystem",
       "sharedIdSystem",
       "tapadIdSystem",
       "teadsIdSystem",
