--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ build
 # gu-mod-start #
 # we install prebid as a dependency via this built file
 !build/dist/prebid.js
+!build/dist/uk/prebid.js
+!build/dist/us/prebid.js
+!build/dist/aus-nz/prebid.js
+!build/dist/row/prebid.js
 # gu-mod-end #
 
 # Test Files
