--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "serve": "gulp serve",
     "test": "gulp test",
     "lint": "gulp lint",
-    "build": "gulp build --modules=modules.json"
+    "build:uk": "gulp build --modules=modules-uk.json --version=uk",
+    "build:us": "gulp build --modules=modules-us.json --version=us",
+    "build:aus-nz": "gulp build --modules=modules-aus-nz.json --version=aus-nz",
+    "build:row": "gulp build --modules=modules-row.json --version=row",
+    "build:all": "gulp build --modules=modules-uk.json --version=uk && gulp build --modules=modules-us.json --version=us && gulp build --modules=modules-aus-nz.json --version=aus-nz && gulp build --modules=modules-row.json --version=row"
   },
   "repository": {
     "type": "git",
